# iot-backend

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  docker-compose.example.yaml  docker-compose.yaml
.github/workflows/: docker-publish.yaml
crates/iot-cli/: Cargo.toml
crates/iot-cli/src/: main.rs
crates/iot-db/: Cargo.toml
crates/iot-db/src/: errors.rs  lib.rs
crates/iot-entities/: Cargo.toml
crates/iot-entities/src/: lib.rs
crates/iot-listener/: Cargo.toml
crates/iot-listener/src/: errors.rs  lib.rs
crates/iot-server/: Cargo.toml
crates/iot-server/src/: errors.rs  lib.rs
crates/iot-server/src/routes/: mod.rs  ping.rs  sensor.rs
migrations/: 20251128015213_init-entries.down.sql  20251128015213_init-entries.up.sql
