[workspace]
members = ["crates/*"]
default-members = ["crates/iot-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ricardo Rodriguez Medina"]
readme = "README.md"
repository = "https://github.com/typst/typst"

[workspace.dependencies]
iot-cli = { path = "crates/iot-cli" }
iot-server = { path = "crates/iot-server" }
iot-entities = { path = "crates/iot-entities" }
iot-listener = { path = "crates/iot-listener" }
iot-db = { path = "crates/iot-db" }

clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v7", "fast-rng", "serde"] }
thiserror = { version = "2" }
time = "0.3.44"
sqlx = { version = "0.8.6", features = ["migrate", "uuid", "time", "mysql", "runtime-tokio", "tls-rustls", "derive"] }
pretty_env_logger = "0.4"
log = "0.4"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package."iot-cli"]
strip = true
