[package]
name = "iot-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
iot-entities = { workspace = true }

tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true }
time = { workspace = true }
log = { workspace = true }

axum = "0.8.7"
tower-http = { version = "0.6.7", features = ["cors"] }
